--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@
 @import "assets/scss/_notifications";
 @import "assets/scss/_customer-view.scss";
 @import "assets/scss/_transaction-view.scss";
+@import "assets/scss/_profile.scss";
 
 /***************
   HTML Styles
