--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -5,7 +5,7 @@
       <div class="dashboard__filters__date__quick">
         <span *ngFor="let dateFilter of dateFilters; let i = index"
               class="dashboard__filters__date__quick__item"
-              [class.dashboard__filters__date__quick__item--active]="activeDataFilterIndex===i"
+              [class.dashboard__filters__date__quick__item--active]="activeDateFilterIndex===i"
               (click)="setActiveDateFilterIndex(i)"
               [class.dashboard__filter__data__quick__item--disabled]="dateFilter.label === 'CUSTOM'">{{dateFilter.label}}</span>
       </div>
@@ -43,6 +43,12 @@
       </div>
     </div>
   </div>
+
+  <div class="dashboard__overview">
+    <transaction-overview class="dashboard__overview__item" *ngFor="let option of overviewOptions" [title]="option.title" [mapToResult]="option.mapToResult" [overview]="(transactionsService.transactionsOverview$ | async)"></transaction-overview>
+  </div>
+
+  <div class="dashboard__flex-placeholder"></div>
 
   <div class="dashboard__chart">
     <div class="dashboard__chart__title">
