--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
@@ -1,5 +1,5 @@
 <div class="transaction-overview" *ngIf="overview && mapToResult && mapToResult(overview)">
-  <img  class="transaction-overview__image" src="/assets/images/result-item-billing.svg">
+  <img  class="transaction-overview__image" src="/assets/images/{{image}}">
   <div class="transaction-overview__count">{{mapToResult(overview).count}}</div>
   <div class="transaction-overview__title">{{title}}</div>
   <div class="transaction-overview__amount">${{mapToResult(overview).amount}}</div>
