--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -330,6 +330,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 5px 0;
     width: 50%;
 
     @media only screen and (max-width: 1440px) {
